testdata/010-too-legit.stderr
error: expected: YARN (line=2 col=23)
    VISIBLE "Too legit" 2QUIT
                        ^
