testdata/010-too-legit.lol
HAI 1.2
  VISIBLE "Too legit" 2QUIT
KTHXBYE
